<resources>
    <string name="app_name">AppBookshop</string>
    <string name="title" />
    <string name="category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="discription">Discription</string>
    <string name="Available_Qty">Available Qty</string>
    <string name="price">Price</string>
    <string name="offer">Offer</string>
    <string name="submit">Submit</string>
    <string name="view">View</string>
    <string name="img_pd">Add Product Image</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logintxt">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="phone">Contact Number</string>
    <string name="cpassword">Confirm Password</string>

    <string name="regtxt">Already have an account ?</string>
</resources>