<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UpdateAccountActivity">

    <Button
        android:id="@+id/update60"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@color/btn"
        android:text="Update"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cancel60"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword2" />

    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar"
        app:title="@string/title" />


    <EditText
        android:id="@+id/updateEmail"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatefullName" />

    <EditText
        android:id="@+id/updatefullName"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updatecnumber"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/updatePassword2"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatecnumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/cancel60"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@color/btn"
        android:text="Cancel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>